--- a/index.html
+++ b/index.html
@@ -14,32 +14,44 @@
         }
         
         #canvas {
-            height: 500px;
-            border: 10px solid pink;
+            display: block;
         }
     </style>
 </head>
 
 <body>
-    <div id="canvas"></div>
+    <canvas id="canvas" width="" height=""></canvas>
     <script>
-        canvas.onclick = (e) => {
-            console.log(e);
-            console.log(e.clientX);
-            console.log(e.clientY); // 通过log得到鼠标的位置，创建div·再创建CSS
-            // log 调试大法
-            let div = document.createElement("div");
-            div.style.position = "absolute";
-            div.style.left = e.clientX + "px";
-            div.style.top = e.clientY + "px";
-            // div.style.border = '1px solid red'
-            div.style.width = "6px";
-            div.style.height = "6px";
-            div.style.marginLeft = "-3px";
-            div.style.marginTop = "-3px";
-            div.style.borderRadius = "50%";
-            div.style.backgroundColor = "black";
-            canvas.appendChild(div);
+        var canvas = document.getElementById("canvas");
+        canvas.width = document.documentElement.clientWidth;
+        canvas.height = document.documentElement.clientHeight;
+        // 画线
+        var ctx = canvas.getContext("2d");
+
+        let painting = false; // painting 绘画
+
+        ctx.fillStyle = "pink";
+        ctx.strokeStyle = "none"; //描边
+
+        canvas.onmousedown = () => {
+            painting = true;
+        };
+
+        canvas.onmousemove = (e) => {
+            //事件会在鼠标指针移动时发生
+            if (painting === true) {
+                //ctx.fillRect(e.clientX - 5, e.clientY - 5, 10, 10); // 横纵 宽高
+                ctx.beginPath();
+                ctx.arc(e.clientX, e.clientY, 10, 0, 2 * Math.PI);
+                ctx.stroke();
+                ctx.fill();
+            } else {
+                console.log("什么都不做");
+            }
+        };
+
+        canvas.onmouseup = () => {
+            painting = false;
         };
     </script>
 </body>
