--- a/index.html
+++ b/index.html
@@ -22,37 +22,55 @@
 <body>
     <canvas id="canvas" width="" height=""></canvas>
     <script>
-        var canvas = document.getElementById("canvas");
+        let canvas = document.getElementById("canvas");
         canvas.width = document.documentElement.clientWidth;
         canvas.height = document.documentElement.clientHeight;
-        // 画线
-        var ctx = canvas.getContext("2d");
-
-        let painting = false; // painting 绘画
-
+        let ctx = canvas.getContext("2d");
         ctx.fillStyle = "pink";
         ctx.strokeStyle = "none"; //描边
+        ctx.lineWidth = 5; // 粗细
+        ctx.lineCap = "round"; // 线的缝隙是圆的不是锯齿
 
-        canvas.onmousedown = () => {
-            painting = true;
-        };
+        let painting = false; // painting 绘画
+        let last;
 
-        canvas.onmousemove = (e) => {
-            //事件会在鼠标指针移动时发生
-            if (painting === true) {
-                //ctx.fillRect(e.clientX - 5, e.clientY - 5, 10, 10); // 横纵 宽高
-                ctx.beginPath();
-                ctx.arc(e.clientX, e.clientY, 10, 0, 2 * Math.PI);
-                ctx.stroke();
-                ctx.fill();
-            } else {
-                console.log("什么都不做");
-            }
-        };
+        var isTouchDevice = "ontouchstart" in document.documentElement;
+        if (isTouchDevice) {
+            canvas.ontouchstart = (e) => {
+                let x = e.touches[0].clientX;
+                let y = e.touches[0].clientY;
+                last = [x, y];
+            };
+            canvas.ontouchmove = (e) => {
+                // 这里是手机
+                let x = e.touches[0].clientX;
+                let y = e.touches[0].clientY;
+                drawLine(last[0], last[1], x, y);
+                last = [x, y];
+            };
+        } else {
+            canvas.onmousedown = (e) => {
+                painting = true;
+                last = [e.clientX, e.clientY];
+            };
 
-        canvas.onmouseup = () => {
-            painting = false;
-        };
+            canvas.onmousemove = (e) => {
+                if (painting === true) {
+                    drawLine(last[0], last[1], e.clientX, e.clientY);
+                    last = [e.clientX, e.clientY];
+                }
+            };
+            canvas.onmouseup = () => {
+                painting = false;
+            };
+        }
+
+        function drawLine(x1, y1, x2, y2) {
+            ctx.beginPath();
+            ctx.moveTo(x1, y1);
+            ctx.lineTo(x2, y2);
+            ctx.stroke();
+        }
     </script>
 </body>
 
