--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         }
 
         function drawLine(x1, y1, x2, y2) {
+            // 三角形
             ctx.beginPath();
             ctx.moveTo(x1, y1);
             ctx.lineTo(x2, y2);
